<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CityActivity"
    android:background="@color/white_light">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_2sdp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/search" />

        <EditText
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_55sdp"
            android:background="@color/white"
            android:hint="@string/search_for_your_city"
            android:textSize="@dimen/_14ssp"
            android:autofillHints=""
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            android:inputType="text" />


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/locationCardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_55sdp"
            android:text="@string/auto_detect_my_location"
            android:textColor="@color/book_my_show_red"
            android:textSize="@dimen/_13ssp" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="POPULAR CITIES"
        android:layout_marginStart="@dimen/_15sdp"
        android:textColor="@color/grey"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/locationCardView"
        app:layout_constraintTop_toBottomOf="@+id/locationCardView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cityRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_light"
        android:layout_marginTop="@dimen/_10sdp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:spanCount="4"
        tools:listitem="@layout/city_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>